네이버 검색 엔진 등록

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "ddc194c016bf5b1db876cbaefb237e49a9bb5c2d"
 yandex_site_verification :
 baidu_site_verification  :
 
