--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,19 +9,27 @@ main:
 
 
 docs:
-  - title: "대목차1"
-    children: 
-      - title: "Category"
-        url: /categories/
-      - title: "Tag"
-        url: /tags/
+  - title: "블로그소개"
+    url: /self_introduce/
+        
+  - title: "코딩테스트/알고리즘"
+    children:
+      - title: "Baekjoon(with C++)"
+        url: /baekjoon_with_c++/
 
-  - title: "대목차2"
-    children: 
-      - title: "Category"
-        url: /categories/
-      - title: "Tag"
-        url: /tags/
+  # - title: "대목차1"
+  #   children: 
+  #     - title: "Category"
+  #       url: /categories/
+  #     - title: "Tag"
+  #       url: /tags/
+
+  # - title: "대목차2"
+  #   children: 
+  #     - title: "Category"
+  #       url: /categories/
+  #     - title: "Tag"
+  #       url: /tags/
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
