--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
-  - title: "Category"
-    url: /categories/
-  - title: "Tag"
-    url: /tags/
+  # - title: "Category"
+  #   url: /categories/
+  # - title: "Tag"
+  #   url: /tags/
   - title: "Search"
     url: /search/
 
@@ -11,7 +11,7 @@ main:
 docs:
   - title: "블로그소개"
     url: /self_introduce/
-        
+
   - title: "코딩테스트/알고리즘"
     children:
       - title: "Baekjoon(with C++)"
